# POI

./: .gitignore  CMakeLists.txt  Makefile  cmake_install.cmake  main  run.sh  todo.txt
data/: book1.txt  book2.txt  book4.txt
include/: classifier.hpp  config.hpp  genre_model.hpp  manager.hpp  train_model.hpp  utils.hpp  worker.hpp
src/: classifier.cpp  genre_model.cpp  main.cpp  manager.cpp  train_model.cpp  utils.cpp  worker.cpp
